# angela

./: .golangci.yml  README.md
demo/: pyproject.toml
internal/cli/: output.go  update.go
internal/pypi/: client.go  version.go
internal/ui/: banner.go  color.go  spinner.go  symbol.go
